# skillvla

./: .gitignore  .gitmodules  README.md  eval_openvla_simpler_env.py  pyproject.toml  requirements.txt  ruff.toml  setup.py  train.py  train_vla.py
eval/: eval_openvla_simpler.py
prismatic/conf/: vla.py
prismatic/models/: load.py
prismatic/models/vlas/: openvla.py
prismatic/models/vlms/: prismatic.py
prismatic/preprocessing/: download.py
prismatic/training/: metrics.py
prismatic/training/strategies/: base_strategy.py  ddp.py  fsdp.py
skillvla/: eval.py  query_vlm.py  train.py  train_old.py
skillvla/components/: __init__.py  action_decoder.py  action_head.py  factory.py  materialize.py
skillvla/components/action_head/: base_action_head.py  diffusion_action_head.py  openvla_action_head.py
skillvla/components/diffusion_policy/: diffusion_policy.py
skillvla/components/lang_encoder/: base_lang_encoder.py
skillvla/components/llm/: base_llm.py  llama2.py
skillvla/components/llm_backbone/: base_llm_backbone.py
skillvla/components/obs_encoder/: base_obs_encoder.py  openvla_obs_encoder.py
skillvla/components/skill_predictor/: skill_predictor.py
skillvla/components/skill_selector/: base_skill_selector.py  skill_predictor.py  skill_selector.py  vq_skill_selector.py
skillvla/components/vision/: base_vision.py  dinosiglip_vit.py
skillvla/conf/: vla.py  vla_conf.py
skillvla/dataset/: droid_dataloader.py
skillvla/datasets/: datasets.py  factory.py  materialize.py
skillvla/datasets/rlds/: dataset.py
skillvla/models/: base_vla.py  base_vlm.py  skillvla.py
skillvla/robomimic/: macros.py
skillvla/util/: __init__.py  batching_utils.py  data_utils.py  training_utils.py
tests/: test_dataset.py  test_maniskill.py  test_simpler_env.py  test_vla.py
(+77 files in other folders)
