[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "skillvla"
authors = [{ name = "Brandon Y. Yang", email = "branyang@virginia.edu" }]
description = "SkillVLA"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "vision-language-actions models",
    "multimodal pretraining",
    "robot learning",
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch==2.5.1",
    "torchao==0.6.1",
    "torchtune==0.3.1",
    "torchvision==0.20.1",
    "tensorboard==2.18.0",
    "mani_skill==3.0.0b12",
]

[project.optional-dependencies]
dev = ["black>=24.2.0", "gpustat", "ipython", "pre-commit", "ruff>=0.2.2"]
sagemaker = ["boto3", "sagemaker"]


[tool.setuptools.packages.find]
where = [".", "skillvla"]

[tool.setuptools.package-data]
"prismatic" = ["py.typed"]

[tool.black]
line-length = 150
target-version = ["py38", "py39", "py310"]
preview = true

[tool.ruff]
line-length = 150
target-version = "py38"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "RUF", "W"]
ignore = ["F722"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
